docs: stop claiming agent attach requires preinstalled spectre-core (#441)
Attach bootstrap already injects nested inject-runtime.jar when the
target only has Compose. Update the spectre skill, packaged
spectre-ui-automation skill, install/troubleshooting/JUnit/IntelliJ
guides, and README to describe both paths. Pin the guidance with a
contract test.

Co-authored-by: Cursor Agent <cursoragent@cursor.com>